correcao no grafico